# davoxide

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Justfile  LICENSE.md  README.md  docker-compose.yml  sqlx-data.json
.github/workflows/: build.yml  lint.yml
frontend/: .env.example  .eslintrc  index.html  package.json  tsconfig.json  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx  api.ts  main.tsx  toasts.ts
frontend/src/components/: ActionTag.tsx
frontend/src/components/Details/: Details.tsx  index.ts  style.module.css
frontend/src/components/Layout/: Layout.tsx  style.css  style.module.css
frontend/src/components/Layout/components/: Navigation.tsx  navigation.module.css
frontend/src/components/Table/: Table.tsx  index.ts  style.module.css
frontend/src/components/Table/components/: ActionsColumn.tsx  CenteredRow.tsx  NonIdealRow.tsx
frontend/src/lib/: toasts.ts  types.ts
frontend/src/lib/hooks/: index.ts  usePageTitle.ts
frontend/src/pages/: NotFound.tsx
frontend/src/pages/Files/: Files.tsx  style.css  style.module.css
frontend/src/pages/Files/components/: BackButton.tsx  Breadcrumb.tsx
frontend/src/pages/Files/components/Entry/: Entry.tsx  index.ts  style.css  style.module.css  types.ts
frontend/src/pages/NotFound/: NotFound.tsx  style.module.css
frontend/src/pages/Profile/: Profile.tsx  style.css  style.module.css
frontend/src/pages/UserDetail/: UserDetail.tsx  style.css  style.module.css  types.ts
frontend/src/pages/UserDetail/components/: ActionTag.tsx  AssignPermission.tsx  DeleteButton.tsx  EditableDefaultAccess.tsx  PermissionRow.tsx  RevokeAccessToken.tsx
frontend/src/pages/UsersList/: UsersList.tsx  style.css  style.module.css
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_users_table.rs  m20220723_143827_create_permissions_table.rs  main.rs  tables.rs
migrations/: 20220727005503_create_users_table.sql  20220727005654_create_permissions_table.sql  20220727041843_make_permissions_applies_to_not_null.sql
src/: authentication.rs  config.rs  error.rs  frontend.rs  main.rs  permissions.rs  webdav.rs
src/database/: mod.rs  permission.rs  permission_manager.rs  types.rs  user.rs  user_manager.rs
src/database/entities/: mod.rs  permission.rs  prelude.rs  sea_orm_active_enums.rs  user.rs
src/graphql/: fs.rs  logging.rs  mod.rs  mutation.rs  outputs.rs  query.rs  tracing.rs
src/security/: authentication.rs  mod.rs  permissions.rs
